@@ -1,0 +1,73 @@
+package org.eclipse.linuxtools.valgrind.massif;
+
+import org.eclipse.debug.ui.DebugUITools;
+import org.eclipse.debug.ui.IDebugUIConstants;
+import org.eclipse.jface.action.Action;
+import org.eclipse.jface.action.ActionContributionItem;
+import org.eclipse.jface.action.IAction;
+import org.eclipse.jface.action.IMenuCreator;
+import org.eclipse.swt.widgets.Control;
+import org.eclipse.swt.widgets.Display;
+import org.eclipse.swt.widgets.Menu;
+import org.eclipse.swt.widgets.MenuItem;
+
+public class MassifPidMenuAction extends Action implements IMenuCreator {
+
+	protected Menu menu;
+	protected MassifViewPart view;
+	protected Integer[] pids;
+
+	public MassifPidMenuAction(MassifViewPart view) {
+		super(Messages.getString("MassifPidMenuAction.Select_Process_ID"), IAction.AS_DROP_DOWN_MENU); //$NON-NLS-1$
+		this.view = view;
+
+		setToolTipText(Messages.getString("MassifPidMenuAction.Select_Process_ID")); //$NON-NLS-1$
+		setImageDescriptor(DebugUITools.getImageDescriptor(IDebugUIConstants.IMG_OBJS_THREAD_RUNNING));
+		setMenuCreator(this);
+	}
+
+	public void dispose() {
+		if (menu != null) {
+			menu.dispose();
+		}
+	}
+
+	public Menu getMenu(Control parent) {
+		if (menu == null) {
+			if (pids != null) {
+				menu = new Menu(parent);
+				for (int i = 0; i < pids.length; i++) {
+					final Integer pid = pids[i];
+					ActionContributionItem item = new ActionContributionItem(new Action("PID " + String.valueOf(pids[i]), IAction.AS_RADIO_BUTTON) { //$NON-NLS-1$
+						@Override
+						public void run() {
+							view.setPid(pid);						
+							Display.getDefault().syncExec(new Runnable() {
+								public void run() {
+									view.refreshView();
+									MenuItem[] items = menu.getItems();
+									for (int j = 0; j < items.length; j++) {
+										items[j].setSelection(false);
+									}
+									setChecked(true);
+								}							
+							});
+						}
+					});
+					item.fill(menu, -1);
+				}	
+				menu.getItem(0).setSelection(true);
+			}
+		}
+		return menu;
+	}
+
+	public Menu getMenu(Menu parent) {
+		return null;
+	}
+
+	public void setPids(Integer[] pids) {
+		this.pids = pids;
+	}
+
+}
