@@ -1,8 +1,10 @@
 MassifLaunchDelegate.Error_parsing_output=Error parsing output
 MassifLaunchDelegate.Retrieving_massif_data_dir=Retrieving massif data dir failed.
+MassifParser.Cannot_parse_PID=Cannot parse PID from output file
 MassifParser.Parsing_massif_output_failed=Parsing massif output failed on line: {0}
 MassifParser.Snapshot_n=Snapshot {0} - {1}
 MassifParser.Unexpected_EOF=Unexpected EOF
+MassifPidMenuAction.Select_Process_ID=Select Process ID
 MassifToolPage.administrative_bytes=administrative bytes per block:
 MassifToolPage.allocation_functions=allocation functions:
 MassifToolPage.allocation_peak_inaccuracy=allocation peak inaccuracy:
